Fixing backface visibility for safari

--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -25,6 +25,7 @@
             .transition-duration(@flip-duration);
             .front,
             .back {
+                -webkit-backface-visibility: hidden;
                 backface-visibility: hidden;
                 position: absolute;
                 top: 0;
